--- a/static/style.css
+++ b/static/style.css
@@ -5,7 +5,7 @@
   }
 .jumbotron {
     color: #fff;
-    background: #BC2731;
+    background: rgb(39, 99, 188);
     width: 100%;
     height: 100%;
     padding:25px;
