--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="jumbotron">
       <h1>Mission to Mars</h1>
       <p>
-        <a class="btn btn-primary btn-lg" href="/scrape" role="button">Scrape new Mars Data</a>
+        <!-- <a class="btn btn-primary btn-lg" href="/C:\Users\olwan\Desktop\Web-Scraping-and-Document-Databases" role="button">Scrape new Mars Data</a> -->
       </p>
 
       <div class="sigline">
