--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
     <div class="jumbotron">
       <h1>Mission to Mars</h1>
       <p>
-        <!-- <a class="btn btn-primary btn-lg" href="/C:\Users\olwan\Desktop\Web-Scraping-and-Document-Databases" role="button">Scrape new Mars Data</a> -->
+        <a class="btn btn-primary btn-lg" href="/template" role="button">new Mars Data</a>
       </p>
 
       <div class="sigline">
@@ -29,7 +29,7 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-12">
-          <h2>This is the latest Mars news.</h2>
+          <h2>Mars news.</h2>
           <h4>{{mars.news_date}}</h4>
           <h4> {{ mars.news_title }}</h4>
           <p> {{mars.summary}} </p>
